--- a/env/values.yaml
+++ b/env/values.yaml
@@ -30,3 +30,12 @@ expose:
   Annotations:
     helm.sh/hook: post-install,post-upgrade
     helm.sh/hook-delete-policy: hook-succeeded
+expose:
+  config:
+    domain: 104.155.72.204.nip.io
+    exposer: Ingress
+    http: "true"
+    tlsacme: "false"
+  Annotations:
+    helm.sh/hook: post-install,post-upgrade
+    helm.sh/hook-delete-policy: hook-succeeded
