Add environment configuration

--- a/env/values.yaml
+++ b/env/values.yaml
@@ -201,3 +201,21 @@ jenkins:
     GHE:
     - Name: GHE
       Url: https://github.beescloud.com/api/v3/
+expose:
+  config:
+    domain: 35.205.206.250.nip.io
+    exposer: Ingress
+    http: "true"
+    tlsacme: "false"
+    pathMode: ""
+  Annotations:
+    helm.sh/hook: post-install,post-upgrade
+    helm.sh/hook-delete-policy: hook-succeeded
+jenkins:
+  Servers:
+    GHE:
+    - Name: GHE
+      Url: https://github.beescloud.com/api/v3/
+    Global:
+      EnvVars:
+        TILLER_NAMESPACE: kube-system
