Add environment configuration

--- a/env/values.yaml
+++ b/env/values.yaml
@@ -234,3 +234,16 @@ jenkins:
     Global:
       EnvVars:
         TILLER_NAMESPACE: kube-system
+expose:
+  config:
+    domain: 35.241.201.127.nip.io
+    exposer: Ingress
+    http: "true"
+  Annotations:
+    helm.sh/hook: post-install,post-upgrade
+    helm.sh/hook-delete-policy: hook-succeeded
+jenkins:
+  Servers:
+    Global:
+      EnvVars:
+        TILLER_NAMESPACE: kube-system
